# cargo-chrono

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  action.yml  sqlite.rs
.github/: CODEOWNERS  COMMIT_CONVENTION.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  task.md  task.yml
.github/workflows/: build-perf.yml  ci.yml  perf-comment.yml  release.yml
docs/: DESIGN.md  ONBOARDING.md
docs/assets/: README.md
docs/internal/: AGENTS.md  CONCURRENCY.md  DESIGN.md  FINAL_REPORT.md  ONBOARDING.md  PROJECT_HISTORY.md  README.md  ROLE_OWNERSHIP.md
examples/: ratatui_hello.rs
examples/ci/: build-perf.yml  perf-comment.yml
src/: main.rs
src/anomaly/: mod.rs
src/broker/: mod.rs
src/cli/: json.rs  mod.rs
src/diff/: critical_path.rs  mod.rs
src/model/: diff.rs  events.rs  ids.rs  mod.rs  persisted.rs
src/parser/: mod.rs
src/persist/: migrations.rs  mod.rs  sqlite.rs
src/supervisor/: mod.rs
src/tui/: mod.rs  render.rs  state.rs  system_monitor.rs
tests/: cli_manifest.rs  completions.rs
tests/fixtures/: README.md  sample_output.jsonl
