[package]
name = "cargo-chrono"
version = "0.1.0"
edition = "2021"
description = "Cargo build performance observer — record, diff, and watch your Rust builds"
license = "MIT"
readme = "README.md"
keywords = ["cargo", "build", "performance", "profiling"]
categories = ["development-tools::profiling", "command-line-utilities"]

[[bin]]
name = "cargo-chrono"
path = "src/main.rs"

[[example]]
name = "ratatui_hello"
path = "examples/ratatui_hello.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

[dev-dependencies]
tempfile = "3"
