[package]
name = "cargo-chronoscope"
version = "0.1.6"
edition = "2021"
description = "Cargo build performance observer — record, diff, and watch your Rust builds"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ymw0407/cargo-chronoscope"
homepage = "https://github.com/ymw0407/cargo-chronoscope"
keywords = ["cargo", "build", "performance", "profiling"]
categories = ["development-tools::profiling", "command-line-utilities"]
include = [
    "/src/**/*",
    "/examples/**/*",
    "/Cargo.toml",
    "/README.md",
    "/LICENSE",
]

[[bin]]
name = "cargo-chronoscope"
path = "src/main.rs"

[[example]]
name = "ratatui_hello"
path = "examples/ratatui_hello.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
ratatui = "0.30"
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.38"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

[dev-dependencies]
tempfile = "3"

# cargo-binstall metadata.
#
# Tells `cargo binstall` where the prebuilt archives published by the
# `release-binaries` job in .github/workflows/release.yml live. The URL
# template resolves at install time:
#   - {repo}    → repository URL
#   - {version} → crate version
#   - {target}  → host triple (e.g. x86_64-unknown-linux-gnu)
# Each archive contains the `cargo-chronoscope` binary at its root.
#
# Default is the Unix `.tar.gz` archive. Windows targets get an override
# below because taiki-e/upload-rust-binary-action packages Windows builds
# as `.zip` (containing a `.exe`).
[package.metadata.binstall]
pkg-url = "{repo}/releases/download/v{version}/{name}-{target}.tar.gz"
bin-dir = "{bin}{binary-ext}"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{repo}/releases/download/v{version}/{name}-{target}.zip"
pkg-fmt = "zip"
